; ModuleID = '/home/carl/AnghaBench/RetroArch/libretro-common/file/extr_config_file.c_config_entry_exists.c'
source_filename = "/home/carl/AnghaBench/RetroArch/libretro-common/file/extr_config_file.c_config_entry_exists.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_3__ = type { %struct.config_entry_list* }
%struct.config_entry_list = type { %struct.config_entry_list*, i32 }

; Function Attrs: noinline nounwind optnone uwtable
define dso_local i32 @config_entry_exists(%struct.TYPE_3__* %0, i8* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_3__*, align 8
  %5 = alloca i8*, align 8
  %6 = alloca %struct.config_entry_list*, align 8
  store %struct.TYPE_3__* %0, %struct.TYPE_3__** %4, align 8
  store i8* %1, i8** %5, align 8
  %7 = load %struct.TYPE_3__*, %struct.TYPE_3__** %4, align 8
  %8 = getelementptr inbounds %struct.TYPE_3__, %struct.TYPE_3__* %7, i32 0, i32 0
  %9 = load %struct.config_entry_list*, %struct.config_entry_list** %8, align 8
  store %struct.config_entry_list* %9, %struct.config_entry_list** %6, align 8
  br label %10

10:                                               ; preds = %21, %2
  %11 = load %struct.config_entry_list*, %struct.config_entry_list** %6, align 8
  %12 = icmp ne %struct.config_entry_list* %11, null
  br i1 %12, label %13, label %25

13:                                               ; preds = %10
  %14 = load i8*, i8** %5, align 8
  %15 = load %struct.config_entry_list*, %struct.config_entry_list** %6, align 8
  %16 = getelementptr inbounds %struct.config_entry_list, %struct.config_entry_list* %15, i32 0, i32 1
  %17 = load i32, i32* %16, align 8
  %18 = call i64 @string_is_equal(i8* %14, i32 %17)
  %19 = icmp ne i64 %18, 0
  br i1 %19, label %20, label %21

20:                                               ; preds = %13
  store i32 1, i32* %3, align 4
  br label %26

21:                                               ; preds = %13
  %22 = load %struct.config_entry_list*, %struct.config_entry_list** %6, align 8
  %23 = getelementptr inbounds %struct.config_entry_list, %struct.config_entry_list* %22, i32 0, i32 0
  %24 = load %struct.config_entry_list*, %struct.config_entry_list** %23, align 8
  store %struct.config_entry_list* %24, %struct.config_entry_list** %6, align 8
  br label %10

25:                                               ; preds = %10
  store i32 0, i32* %3, align 4
  br label %26

26:                                               ; preds = %25, %20
  %27 = load i32, i32* %3, align 4
  ret i32 %27
}

declare dso_local i64 @string_is_equal(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
